src/test/deca/context/valid/class/return/null.deca
// Description:
//    Déclaration d'une fonction int mais avec return float
//
// Resultats:
//    cannot cast float to int


class A {
	A a() {
		return null;
	}
}

{
}

